url redirección index cambiada

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
                             </div>
                             <input type="hidden" name="_captcha" value="false">
-                            <input type="hidden" name="_next" value="http://127.0.0.1:5500/gracias.html">
+                            <input type="hidden" name="_next" value="https://teixeira26.github.io/portafolio/gracias.html">
                            
                             <!-- Submit Button-->
                             <input class="btn btn-primary btn-xl " id="submitButton" type="submit" value="Enviar" name="enviar"></input>
