url redirección gracias cambiada

--- a/gracias.html
+++ b/gracias.html
@@ -20,7 +20,7 @@
 <body>
     <div style="width: 100vw; height:100vh; background-color:#F1A04D; display: flex; justify-content: center; align-items: center; flex-direction: column;">
         <h1 style="color:#2c3e50 ;">Gracias XD</h1>
-        <a href="http://127.0.0.1:5500/index.html">
+        <a href="https://teixeira26.github.io/portafolio/">
         <input class="btn btn-primary btn-xl"type="button" value="volver">
         </a>
     </div>
