--- a/gracias.html
+++ b/gracias.html
@@ -19,9 +19,9 @@
 </head>
 <body>
     <div style="width: 100vw; height:100vh; background-color:#F1A04D; display: flex; justify-content: center; align-items: center; flex-direction: column;">
-        <h1 style="color:#2c3e50 ;">Gracias XD</h1>
+        <h1 style="color:#2c3e50 ;">Thanks XD</h1>
         <a href="https://teixeira26.github.io/portafolio/">
-        <input class="btn btn-primary btn-xl"type="button" value="volver">
+        <input class="btn btn-primary btn-xl"type="button" value="🡸">
         </a>
     </div>
 </body>
